<resources>
    <string name="app_name">PortalSampleApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="header_first_title">Welcome to the \nReference App</string>
    <string name="header_second_title">Explore the SDK</string>

    <string name="calling_screen_name">Calling</string>
    <string name="calling_class_name">Lorem_ClassName</string>
    <string name="notification_screen_name">Notification</string>
    <string name="notification_class_name">Lorem_ClassName</string>
    <string name="fbns_screen_name">Fbns</string>
    <string name="fbns_class_name">Lorem_ClassName</string>
    <string name="companion_screen_name">Companion</string>
    <string name="companion_class_name">Lorem_ClassName</string>
    <string name="handraise_screen_name">Hand Raise</string>
    <string name="handraise_class_name">Lorem_ClassName</string>
    <string name="smart_camera_screen_name">Smart Camera Editor</string>
    <string name="smart_camera_class_name">Lorem_ClassName</string>
    <string name="privacy_screen_name">Privacy Shutter</string>
    <string name="privacy_class_name">Lorem_ClassName</string>

    <string name="feature_info_close">Close</string>
    <string name="calling_feature_info_header">Calling</string>
    <string name="calling_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="notification_feature_info_header">Notification</string>
    <string name="notification_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="fbns_feature_info_header">Fbns</string>
    <string name="fbns_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="companion_feature_info_header">Companion</string>
    <string name="companion_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="handraise_feature_info_header">Hand Raise</string>
    <string name="handraise_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="smart_camera_feature_info_header">Smart Camera Editor</string>
    <string name="smart_camera_manual_feature_info_header">Smart Camera</string>
    <string name="smart_camera_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="smart_camera_manual_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>
    <string name="privacy_screen_feature_info_header">Privacy Shutter</string>
    <string name="privacy_screen_feature_info_text">Portal Calling offers standard implementations for various VC functionalities and scalable solutions to enrich VC apps with Portal experiences. It assists in areas ranging from Android telephony service integration, to device states handling, to consistent Portal Call Control UX across the platform.</string>

    <string name="camera_error" description="Camera error message">Camera error, exiting activity.</string>
    <string name="default_mode" description="Default Mode">Smart Frame</string>
    <string name="desk_mode" description="Desk Mode">Nearview</string>
    <string name="spotlight_mode" description="Spotlight Mode">Spotlight</string>
    <string name="manual_mode" description="Manual Mode">Manual</string>
    <string name="up" description="Manual mode up navigation">Up</string>
    <string name="down" description="Manual mode down navigation">Down</string>
    <string name="left" description="Manual mode left navigation">Left</string>
    <string name="right" description="Manual mode right navigation">Right</string>
    <string name="zoom_in" description="Manual mode zoom in">Zoom In</string>
    <string name="zoom_out" description="Manual mode zoom out">Zoom Out</string>

    <string name="fbns_header_first_title">FBNS</string>
    <string name="fbns_header_second_title">Complete the following steps to authenticate \n your app with Facebook Notification systems</string>

</resources>
